--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,15 @@
   text-align: center;
   color: white;
 }
+
+body {
+  background-image: linear-gradient(
+    to right bottom,
+    #141414,
+    #181528,
+    #1e143b,
+    #260f4d,
+    #32035e
+  );
+  height: 100vh;
+}
