--- a/src/pages/about/index.css
+++ b/src/pages/about/index.css
@@ -5,3 +5,25 @@
   align-items: center;
   height: 100vh;
 }
+
+.PAGES-about h1 {
+  color: white;
+  font-size: 5vmin;
+  margin: 0;
+}
+
+.PAGES-about p {
+  color: white;
+  font-size: 3vmin;
+  margin: 0;
+}
+
+.PAGES-about .white-line {
+  height: 6px; /* Thickness of the line */
+  background-color: white; /* Color of the line */
+  width: 75vw; /* Length of the line */
+  margin: 10px 0; 
+  border-radius: 10px;
+}
+
+
