--- a/src/pages/home/index.css
+++ b/src/pages/home/index.css
@@ -4,4 +4,12 @@
   gap: 5vh;
   align-items: center;
   height: 100vh;
+  color: white;
+}
+
+p {
+  font-size: 1.5rem;
+  text-align: center;
+  font-weight: 500;
+  max-width: 75vw;
 }
