--- a/src/pages/install/install.css
+++ b/src/pages/install/install.css
@@ -1,15 +1,15 @@
-.PAGES-home {
+.PAGES-install{
   display: flex;
   flex-direction: column;
   gap: 5vh;
   align-items: center;
   height: 100vh;
-  color: white;
 }
 
-.PAGES-home p {
+.PAGES-install p{
+  text-align: left;
+  color: #fff;
   font-size: 1.5rem;
-  text-align: center;
   font-weight: 500;
   max-width: 75vw;
 }
