--- a/src/components/clickableText/clickableText.css
+++ b/src/components/clickableText/clickableText.css
@@ -1,6 +1,6 @@
 .COMPONENTS-clickable-text {
   font-size: 3.4vmin;
-  color: #101010;
+  color: #33dd99 !important;
   text-decoration: none;
   font-weight: 800;
 }
