--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -4,14 +4,15 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  background-color: rgb(0, 0, 0);
+  /* background-color: #7e2ed6; */
   width: 100vw;
-  height: 8vh;
-  padding: 2vmin 7vmin;
+  height: 10vh;
+  padding: 2vmin 8vmin;
   gap: 8vmin;
   box-sizing: border-box;
   font-family: 'Workbench', sans-serif;
   z-index: 1300;
-  backdrop-filter: blur(6px);
+  backdrop-filter: blur(12px);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  animation: none;
 }
