--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -8,9 +8,7 @@
   color: white;
 }
 
-.PAGES-home p {
-  font-size: 1.5rem;
-  text-align: center;
-  font-weight: 500;
-  max-width: 75vw;
+.PAGES-home-card {
+  animation: fadeIn 1s ease-out;
 }
+
