update node diagram; fix the ui issue in the reference page

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  background-color: #7e2ed6;
+  background-color: #7e2ed666;
   width: 100vw;
   height: 10vh;
   padding: 2vmin 8vmin;
