--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -11,3 +11,16 @@
   animation: fadeIn 1s ease-out;
 }
 
+.PAGES-home-big-demo {
+  padding: left 2vmin;
+}
+
+.PAGES-home-demo-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 16;
+  gap: 8;
+  width: 25vw;
+  min-height: fit-content;
+}
