--- a/src/components/title/title.css
+++ b/src/components/title/title.css
@@ -2,5 +2,6 @@
   color: white;
   font-size: 5vmin;
   font-weight: 700;
+  font-family: 'futura', sans-serif;
   animation: fadeIn 1s ease-out;
 }
