--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -31,11 +31,11 @@ b {
 }
 
 a {
-  color: #ce98e5;
+  color: #51b015;
   text-decoration: none;
   font-weight: 800;
 }
 
 a:hover {
-  color: #dc4fff;
+  color: #407c1a;
 }
